# course_ai_for_industrial_control_students

./: .gitignore  LICENSE  Makefile  pyproject.toml  readme.md
notebooks/00_python_basics/: n00_python_basics_introduction.ipynb
notebooks/01_introduction/: n01_linear_model_training.ipynb  n01_linear_model_training_quizz.md  n02_complex_function_fitting.ipynb  n02_complex_function_fitting_quizz.md
notebooks/02_predictive_maintenance/: .gitignore
notebooks/02_predictive_maintenance/01_supervised_classification/: n03_classification_quiz.md  n03_classification_tutorial.ipynb
notebooks/02_predictive_maintenance/02_unsupervised_annomaly/: n04_kmeans_clustering_quiz.md  n04_kmeans_clustering_tutorial.ipynb  n05_simple_2d_anomaly_det_quiz.md  n05_simple_2d_anomaly_detection.ipynb  n06_anomaly_detection_tutorial.ipynb  n06_anomaly_detection_tutorial_quiz.md
notebooks/02_predictive_maintenance/03_overfitting/: n08_overfitting_evaluation_questionnaire.md  n08_overfitting_underfitting_demo_sin.ipynb
notebooks/02_predictive_maintenance/04_feature_selection/: n09_pca_2d_demonstration.ipynb  n09_pca_demonstration.ipynb  n09_pca_quiz.md
notebooks/02_predictive_maintenance/05_supervised_classification_app/: n10_wine_quality_clf.ipynb  n10_wine_quality_clf_quiz.md  n11_wine_quality_reg.ipynb  n11_wine_quality_reg_quiz.md
notebooks/03_steel_defects_classification/: n12_steel_defect_cifar10_demo_binary.ipynb  n13_steel_defect_cifar10_demo_multiclass.ipynb  n14_steel_defect_cifar10_demo_multiclass_augmentation.ipynb  n14_steel_defect_data_augmentation_quiz.md
notebooks/07_reinforcement_learning/: n11_grid_robot_qlearning_tutorial_training_process.ipynb  n11_grid_robot_qlearning_tutorial_training_process_quiz.md  n13_lunar_lander_reinforcement_learning.ipynb  n13_lunar_lander_reinforcement_learning_quiz.md
scripts/: create_env.ps1  create_env.sh
src/exercise_01/: dataset.py  evaluate.py  model.py  readme_exercise.md  train.py
src/exercise_02/: dataset.py  readme_exercise.md
src/exercise_03/: dataset.py  readme_exercise.md
src/exercise_04/: readme_exercise.md
src/exercise_05/: readme_exercise.md
src/exercise_06/: dataset.py  readme_exercise.md
src/exercise_07/: readme_exercise.md
src/exercise_08/: dataset.py  readme_exercise.md
src/exercise_09/: readme_exercise.md
